fix dark mode error

--- a/allcss/user.css
+++ b/allcss/user.css
@@ -19,7 +19,6 @@
     top: 50px;
     display: none;
     box-shadow: 4px 5px 6px rgb(3, 3, 3);
-    background-color: #fbfbfb;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
